@@ -1,5 +1,5 @@
 .\"Document Author:  Timothy R. Butler   -   tbutler@uninetsolutions.com"
-.TH bochsrc 5 "4 Jun 2020" "bochsrc" "The Bochs Project"
+.TH bochsrc 5 "21 Jun 2020" "bochsrc" "The Bochs Project"
 .\"SKIP_SECTION"
 .SH NAME
 bochsrc \- Configuration file for Bochs.
@@ -1009,13 +1009,14 @@ Example for different drivers:
 .I "speaker:"
 This defines the PC speaker output mode. In the 'sound' mode the beep
 is generated by the square wave generator which is a part of the
-lowlevel sound support. The 'system' mode is only available on Linux
-and Windows. On Linux /dev/console is used for output and on Windows
+lowlevel sound support. In this mode the 'volume' parameter can be used
+to set the output volume (0 - 15). The 'system' mode is only available on
+Linux and Windows. On Linux /dev/console is used for output and on Windows
 the Beep() function. The 'gui' mode forwards the beep to the related
 gui methods (currently only used by the Carbon gui).
 
 Example:
-  speaker: enabled=1, mode=sound
+  speaker: enabled=1, mode=sound, volume=15
 
 .TP
 .I "sb16:"
