@@ -24,6 +24,8 @@ Changes after 2.6.11:
       to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
     - DDC: Added "ddc" parameter to the "vga" option to make it possible
       either to disable the DDC feature or to read the monitor EDID from file.
+  - Sound
+    - Added PC speaker volume control for the lowlevel sound support.
 
 - GUI and display libraries
     - X11 keymaps: added new one for Swiss-German and improved Italian map.
